SO-4227: introduce Json.object() and Json.array()
Migrate test cases and test fixtures to use Json.object instead of hard
to read (and maintain) Map instances.